data-api/k8s/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: data-api
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /data
      backendRefs:
        - name: data-api
          port: 8080
